--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,30 @@
     transform: rotate(360deg);
   }
 }
+
+.form__app{
+  padding: 20px;
+  position: fixed;
+  bottom: 20px;
+  z-index: 1; 
+  background-color: #e9e9eb; 
+  width: 100%;
+  margin: 20px;
+}
+
+.app__formControl{
+  display:  flex !important;
+  flex-direction: row !important;
+}
+
+.app__input{
+  flex: 1;
+
+}
+
+.app__iconButton {
+  flex: 0.29 !important;
+}
+
+
+
